--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,9 +1,11 @@
-FROM python:3.10-buster
+FROM python:3.10-alpine
 
 WORKDIR /app
 
-COPY . .
+COPY ./requirements/requirements.txt requirements.txt
 
-RUN pip3 install -r ./requirements/requirements.txt
+RUN pip3 install -r requirements.txt
+
+COPY . .
 
 CMD ["uvicorn", "spaceship.main:app" , "--host=0.0.0.0", "--port=8080"]
